# pdd-skills-v3

./: .gitignore  .npmignore  LICENSE  README.md  entities.json  index.js  mempalace.yaml  package-lock.json  package.json  pdd-skills.code-workspace
.pdd/: config.yaml  hooks.yaml
config/: bpmn-rules.yaml  pmd.xml  (+9 more)
scaffolds/python-fullstack/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
scaffolds/python-fullstack/backend/app/: __init__.py  config.py  exceptions.py  main.py
scaffolds/python-fullstack/backend/app/api/v1/: __init__.py  auth.py  departments.py  deps.py  dict_items.py  router.py  users.py
scaffolds/python-fullstack/backend/app/core/auth/: __init__.py  dependencies.py  jwt.py  security.py
scaffolds/python-fullstack/backend/app/core/data_permission/: __init__.py  config.py  context.py  decorator.py  engine.py  enums.py  events.py  scope_resolver.py
scaffolds/python-fullstack/backend/app/core/oauth/: __init__.py  base.py  exceptions.py  registry.py
scaffolds/python-fullstack/backend/app/core/oauth/providers/: __init__.py  dingtalk.py  feishu.py  oidc.py  wechat_mini.py  wechat_open.py  wecom.py
scaffolds/python-fullstack/backend/app/core/workflow/: __init__.py  conditions.py  engine.py  enums.py  exceptions.py  models.py  transition_rule.py
scaffolds/python-fullstack/backend/app/database/: database.py
scaffolds/python-fullstack/backend/app/models/: __init__.py  delegation.py  dict_item.py  oauth_binding.py  org.py  role.py  user.py
scaffolds/python-fullstack/backend/app/schemas/: __init__.py  auth.py  common.py  department.py  dict_item.py  user.py
scaffolds/python-fullstack/backend/scripts/: seed_base_data.py
(+376 files in other folders)
